# telnetty

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  bench_test.go  buffer.go  buffer_test.go  color.go  color_test.go  conn.go  conn_test.go  constants.go  doc.go  fuzz_test.go  go.mod  integration_test.go  mud.go  mud_test.go  options.go  options_test.go  parser.go  parser_test.go  readline_test.go  server.go  server_test.go  utils.go  utils_test.go
.github/workflows/: ci.yml
examples/: README.md  client_simple.c  server_libuv.c  server_simple.c
examples/client/: main.go
examples/echo/: main.go
examples/mud/: main.go
include/: telnetty_buffer.h  telnetty_color.h  telnetty_compression.h  telnetty_core.h  telnetty_events.h  telnetty_mcp.h  telnetty_mud.h  telnetty_options.h
testdata/: msdp_samples.txt  negotiation_sequences.txt
tests/: basic.c  test_comprehensive.c
